<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/simple_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_simple_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/simple_title"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:hint="@string/simple_hint" />

    <Button
        android:id="@+id/btn_simple_delete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorAccent"
        android:text="@string/clear"
        android:textColor="@color/textColorLight"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_simple_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/next"
        android:textColor="@color/textColorLight"
        android:textStyle="bold" />

</LinearLayout>